# cct-reading-group

./: .gitignore  .replit  README.md  cct_reading_group.opam  dune-project  flake.nix  replit.nix
cct_reading_group/: dune-project
cct_reading_group/lib/: Meeting1.ml  Meeting1_five.ml  Meeting1_owen.ml  Meeting1_quffaro.ml  Meeting1_sasha.ml
lib/: Categories.ml  Fin_set.ml  Free_category.ml  Free_category.mli  Graph.ml  Meeting1.ml  Meeting1_five.ml  Meeting1_quffaro.ml  Quiver.ml  categories.ml  dune
lib/module_based/: Categories.ml  Fin_set.ml  dune
meetings/: dune
meetings/session0/: Meeting0.ml  Meeting0_owen.ml
meetings/session1/: EXERCISES.md
ocaml/: flake.nix
ocaml/lib/: dune
ocaml/test/: dune
test/: Fin_setTest.ml  Graph_test.ml  cct_reading_group.ml  dune
